CANDLEPIN-840: Added "source" field to ContentOverrideDTOs
- Added the "source" field to ContentOverrideDTOs which stores a
  discriminator value indicating which parent entity "owns" the
  override
- Updated several tests to work properly with the new source field
  on content overrides
- Renamed the ContentResourceContentSpecTest to
  ContentResourceContentOverrideSpecTest